# BI_2021_Python

./: .gitignore  README.md  ftps_links_references.txt  hw_cnn_01.ipynb
.github/workflows/: pylint.yml
python_homework/01_nucleid_acids/: 01_nucleic_acids.py  01_nucleid_acids.py
python_homework/04_virtual_environment_research_hw/: pain.py
python_homework/05_numpy_challenge/: Numpy_exercises.ipynb  README.MD
python_homework/3. fastq_filtrator/: fastq_filtrator.py
python_homework/4. virtual_environment_research_hw/: pyproject.toml
python_homework/5. numpy_challenge/: README.MD
python_homework/API_practice/: README.md  example.fa  page.html  project_api.ipynb  project_api.py  pyproject.toml  requirements.txt
python_homework/classes_practice/: README.md  practice.ipynb  practice.py  pyproject.toml  requirements.txt  test_classes.py
python_homework/converter/: converter.py
python_homework/data_bases_practice/: README.md  db.ipynb  db.py  pyproject.toml
python_homework/data_bases_practice/data/: SNP_ids.txt  metadata.csv
python_homework/decorators_practice/: README.md  dec.py  pyproject.toml
python_homework/fastq_filtrator/: .gitignore  README.md  fastq_filtrator.py  test_01.py  test_filtrator.py
python_homework/functional_programming/: README.md  functional.py  test_funcpractice.py
python_homework/iter_practice/: README.md  practicer_iter.py  pyproject.toml
python_homework/nucleic_acids_tool/: README.md  nucleid_acids_01.py  test_01.py
python_homework/nucleid_acids_tool/: README.md  nucleid_acids_01.py  test_01.py
python_homework/numpy_challenge/: Numpy_exercises.ipynb  README.MD  numpy_challenge.py  test_challenge.py  (+1 more)
python_homework/pandas_practice/: README.md  ppractice.ipynb  ppractice.py  pyproject.toml  requirements.txt
python_homework/pandas_practice/data/: vineEDA.html
python_homework/virtual_environment_research_hw/: README.md  pyproject.toml  requirements.txt
(+37 files in other folders)
