[tool.poetry]
name = "homework_3"
version = "0.1"
description = "Homework 'environments'."
repository = "https://github.com/Freddsle/BI_2021_Python/"
authors = ["Yuliya Burankova"]

[tool.poetry.dependencies]
python = "3.9"

wheel = "0.37.0"   #required by pip to build wheels
google = "3.0.0"
numpy = "1.20.3"   #numba 0.54.1 has requirement numpy<1.21,>=1.17
google-api-python-client = "2.28.0"
kivy = "2.0.0"
bio = "1.3.2"
aiohttp = "3.7.4.post0"
pandas = "1.3.4"
scipy = "1.7.1"
scanpy = "1.8.1"
opencv-python = "4.4.0.46"
lxml = "4.6.3"